@@ -13,7 +13,7 @@ libraryDependencies ++= Seq(
   "com.typesafe.play" % "play-test_2.11" % "2.4.11",
   "org.apache.logging.log4j" % "log4j-core" % "2.9.1",
   "org.elasticsearch.plugin" % "parent-join-client" % "5.6.3",
-  "org.mockito" % "mockito-core" % "1.9.5" %Test,
+  "org.mockito" % "mockito-core" % "3.9.0" %Test,
   "com.google.gdata" % "core" % "1.47.1" exclude ("com.google.guava", "guava"),
   "org.easytesting" % "fest-assert" % "1.4" %Test,
   "org.xbib.elasticsearch.plugin" % "elasticsearch-plugin-bundle" % "5.4.1.0",
@@ -25,6 +25,8 @@ resolvers += "Local Maven Repository" at Path.userHome.asFile.toURI.toURL + ".m2
 lazy val root = (project in file(".")).enablePlugins(PlayJava)
 
 javacOptions ++= Seq("-source", "11", "-target", "11")
+javaOptions in (Test,run) += "--add-opens=java.base/java.lang=ALL-UNNAMED"
+javaOptions in (Test,run) += "--add-opens=java.base/java.util=ALL-UNNAMED"
 
 import com.typesafe.sbteclipse.core.EclipsePlugin.EclipseKeys
 
